--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -12,7 +12,9 @@
     "expo": "^51.0.38",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
