--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.38",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.14",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
+    "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
