--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "expo": "^52.0.14",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
