--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-picker/picker": "^2.10.2",
     "expo": "^52.0.14",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
@@ -18,6 +19,8 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-picker": "^4.3.7",
+    "react-native-pie-chart": "^3.1.0",
     "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
