--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -16,6 +16,7 @@
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.11",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
