--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.10.2",
     "expo": "^52.0.14",
     "expo-constants": "~17.0.3",
