--- a/FinanzTracker/package.json
+++ b/FinanzTracker/package.json
@@ -21,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
     "react-native-picker": "^4.3.7",
     "react-native-pie-chart": "^3.1.0",
     "react-native-svg": "^15.8.0"
